force-app/main/default/objects/AcctPlanLGProject__c/AcctPlanLGProject__c.object-meta.xml
<CustomObject>
    <label>Account Plan LG Project</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Plan LG Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plan LG Project</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>