force-app/main/default/objects/AcctPlanLGProject__c/fields/LongTermLGPercent__c.field-meta.xml
<CustomField>
    <fullName>LongTermLGPercent__c</fullName>
    <description>% of LG - Long Term Project</description>
    <inlineHelpText>% of LG - Long Term Project</inlineHelpText>
    <label>LongTermLGPercent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>