force-app/main/default/objects/AcctPlanLGProject__c/fields/ShortTermLGPercent__c.field-meta.xml
<CustomField>
    <fullName>ShortTermLGPercent__c</fullName>
    <description>% of LG - Short Term Project</description>
    <inlineHelpText>% of LG - Short Term Project</inlineHelpText>
    <label>ShortTermLGPercent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>