force-app/main/default/objects/AcctPlanLGProject__c/fields/ShortTermProjectTenor__c.field-meta.xml
<CustomField>
    <fullName>ShortTermProjectTenor__c</fullName>
    <description>Project tenor (months) - Short Term Project</description>
    <inlineHelpText>Project tenor (months) - Short Term Project</inlineHelpText>
    <label>ShortTermProjectTenor</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>