force-app/main/default/objects/AcctPlanLGProject__c/fields/ShortTermProjectValue__c.field-meta.xml
<CustomField>
    <fullName>ShortTermProjectValue__c</fullName>
    <description>Project value - Short Term Project ซึ่งหมายถึง project ที่มีอายุสั้นกว่า 1 ปี</description>
    <inlineHelpText>Project value - Short Term Project ซึ่งหมายถึง project ที่มีอายุสั้นกว่า 1 ปี</inlineHelpText>
    <label>ShortTermProjectValue</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>